--- a/installers/msi-language/Product.p.wxs
+++ b/installers/msi-language/Product.p.wxs
@@ -114,13 +114,13 @@
 			<DialogRef Id="PrepareDlg" />
 			<DialogRef Id="ProgressDlg" />
 			<DialogRef Id="ResumeDlg" />
-			<DialogRef Id="UserExit" />
 
-			<Publish Dialog="PrivacyConsentDlg" Control="Next" Property="LAST_DIALOG" Value="PrivacyConsentDlg">1</Publish>
-			<Publish Dialog="ProgressDlg" Control="Next" Property="LAST_DIALOG" Value="ProgressDlg">1</Publish>
-			<Publish Dialog="WelcomeDlg" Control="Next" Property="LAST_DIALOG" Value="WelcomeDlg">1</Publish>
-			<Publish Dialog="LicenseAgreementDlg" Control="Next" Property="LAST_DIALOG" Value="LicenseAgreementDlg">1</Publish>
-			<Publish Dialog="InstallDirDlg" Control="Next" Property="LAST_DIALOG" Value="InstallDirDlg">1</Publish>
+			<Publish Dialog="PrivacyConsentDlg" Control="Cancel" Property="LAST_DIALOG" Value="PrivacyConsentDlg">1</Publish>
+			<Publish Dialog="ProgressDlg" Control="Cancel" Property="LAST_DIALOG" Value="ProgressDlg">1</Publish>
+			<Publish Dialog="WelcomeDlg" Control="Cancel" Property="LAST_DIALOG" Value="WelcomeDlg">1</Publish>
+			<Publish Dialog="LicenseAgreementDlg" Control="Cancel" Property="LAST_DIALOG" Value="LicenseAgreementDlg">1</Publish>
+			<Publish Dialog="InstallDirDlg" Control="Cancel" Property="LAST_DIALOG" Value="InstallDirDlg">1</Publish>
+			<Publish Dialog="VerifyReadyDlg" Control="Cancel" Property="LAST_DIALOG" Value="VerifyReadyDlg">1</Publish>
 
 			<Publish Dialog="BrowseDlg" Control="OK" Event="DoAction" Value="WixUIValidatePath" Order="3">1</Publish>
 			<Publish Dialog="BrowseDlg" Control="OK" Event="DoAction" Value="ValidateInstallFolder" Order="4">1</Publish>
@@ -132,6 +132,8 @@
 			<Publish Dialog="CustomExitDialog" Control="Finish" Event="DoAction" Value="LaunchStateToolWizardNotInstalled">STATE_TOOL_WIZARD_CHECK_BOX=1 and NOT Installed and STATE_TOOL_INSTALLED = "false"</Publish>
 			<Publish Dialog="CustomExitDialog" Control="Finish" Event="DoAction" Value="LaunchReleaseNotes">STATE_TOOL_WIZARD_REL_NOTES_CHECK_BOX=1 and NOT Installed</Publish>
 			<Publish Dialog="CustomExitDialog" Control="Finish" Event="DoAction" Value="InstallVSCodeExt">INSTALL_VSCODE_EXT_CHECK_BOX=1 and NOT Installed</Publish>
+
+			<Publish Dialog="CustomUserExitDialog" Control="Finish" Event="EndDialog" Value="Return" Order="999">1</Publish>
 
 			<Publish Dialog="CustomFatalError" Control="Finish" Event="EndDialog" Value="Return" Order="999">1</Publish>
 			<Publish Dialog="CustomFatalError" Control="Finish" Event="DoAction" Value="GAPixel">NOT WIX_IS_NETFRAMEWORK_45_OR_LATER_INSTALLED</Publish>
@@ -198,11 +200,12 @@
 			<Custom Action="SetIsModify" After="CommandsExist">(Installed AND NOT (REMOVE~="ALL"))</Custom>
 			<Custom Action="SetInstallDirOnModify" After="SetIsModify">(Installed AND NOT (REMOVE~="ALL"))</Custom>
 			<Custom Action="CustomOnError" OnExit="error">NOT REMOVE~="ALL"</Custom>
-			<Custom Action="GAReportUserExit" Before="UserExit">NOT REMOVE~="ALL"</Custom>
+			<Custom Action="CustomUserExit" OnExit="cancel">NOT REMOVE~="ALL"</Custom>
 		</InstallUISequence>
 
 		<AdminUISequence>
 			<Custom Action="CustomOnError" OnExit="error">NOT REMOVE~="ALL"</Custom>
+			<Custom Action="CustomUserExit" OnExit="cancel">NOT REMOVE~="ALL"</Custom>
 		</AdminUISequence>
 
 		<CustomAction Id="SetIsModify" Property="IS_MODIFY" Value="true" />
@@ -214,11 +217,16 @@
 		<CustomAction
 			Id="SetStateDeployPropertyValues"
 			Property="StateDeploy"
-			Value="INSTALLDIR=[INSTALLDIR];PROJECT_OWNER_AND_NAME=[PROJECT_OWNER_AND_NAME];IS_MODIFY=[IS_MODIFY];STATE_TOOL_INSTALLED=[STATE_TOOL_INSTALLED];STATE_TOOL_PATH=[STATE_TOOL_PATH];AS_USERNAME=[AS_USERNAME];AS_PASSWORD=[AS_PASSWORD];AS_TOTP=[AS_TOTP];UI_LEVEL=[UILevel];MSI_VERSION=[MSI_VERSION];PRODUCT_VERSION=[ProductVersion];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED];ERROR=[ERROR];ERROR_MESSAGE=[ERROR_MESSAGE];PRODUCT_NAME=[ProductName];USERSID=[UserSID];COMMIT_ID=[CommitID];INSTALL_MODE=[INSTALL_MODE]"
+			Value="INSTALLDIR=[INSTALLDIR];PROJECT_OWNER_AND_NAME=[PROJECT_OWNER_AND_NAME];IS_MODIFY=[IS_MODIFY];STATE_TOOL_INSTALLED=[STATE_TOOL_INSTALLED];STATE_TOOL_PATH=[STATE_TOOL_PATH];AS_USERNAME=[AS_USERNAME];AS_PASSWORD=[AS_PASSWORD];AS_TOTP=[AS_TOTP];UI_LEVEL=[UILevel];MSI_VERSION=[MSI_VERSION];PRODUCT_VERSION=[ProductVersion];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED];ERROR=[ERROR];ERROR_MESSAGE=[ERROR_MESSAGE];PRODUCT_NAME=[ProductName];USERSID=[UserSID];COMMIT_ID=[CommitID];INSTALL_MODE=[INSTALL_MODE];LAST_DIALOG=[LAST_DIALOG]"
 		/>
 		<CustomAction Id="SetUninstallProperties" Property="Uninstall" Value="PRESET=[PRESET];REMEMBER=[REMEMBER];REMEMBER_SHORTCUTDIR=[REMEMBER_SHORTCUTDIR];MSI_VERSION=[MSI_VERSION];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED]" />
-		<CustomAction Id="SetPresetInfo" Property="Preset" Value="REL_NOTES=[REL_NOTES];INSTALLDIR=[INSTALLDIR];APP_START_MENU_PATH=[ApplicationProgramsFolder];PRESET=[PRESET];MSI_VERSION=[MSI_VERSION];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED]" />
-		<CustomAction Id="SetRollbackPropertyValues" Property="Rollback" Value="STATE_TOOL_INSTALLED=[STATE_TOOL_INSTALLED];INSTALLDIR=[INSTALLDIR];MSI_VERSION=[MSI_VERSION];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED]" />
+		<CustomAction Id="SetPresetInfo" Property="Preset" Value="REL_NOTES=[REL_NOTES];INSTALLDIR=[INSTALLDIR];APP_START_MENU_PATH=[ApplicationProgramsFolder];PRESET=[PRESET];MSI_VERSION=[MSI_VERSION];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED];LAST_DIALOG=[LAST_DIALOG];INSTALL_MODE=[INSTALL_MODE]" />
+		<CustomAction Id="SetRollbackPropertyValues" Property="Rollback" Value="STATE_TOOL_INSTALLED=[STATE_TOOL_INSTALLED];INSTALLDIR=[INSTALLDIR];MSI_VERSION=[MSI_VERSION];MsiLogFileLocation=[MsiLogFileLocation];PRIVACY_ACCEPTED=[PRIVACY_ACCEPTED];LAST_DIALOG=[LAST_DIALOG];INSTALL_MODE=[INSTALL_MODE]" />
+		<CustomAction
+			Id="SetCancelPropertyValues"
+			Property="CustomUserExit"
+			Value="INSTALL_MODE=[INSTALL_MODE];PRODUCT_VERSION=[ProductVersion];MsiLogFileLocation=[MsiLogFileLocation];LAST_DIALOG=[LAST_DIALOG]"
+		/>
 
 		<Binary Id="GAPixelCA" SourceFile="$(var.GAPixel.TargetDir)$(var.GAPixel.TargetName).CA.dll" />
 		<CustomAction Id="GAPixel" Impersonate="yes" BinaryKey="GAPixelCA" DllEntry="SendPixel" Return="ignore" />
@@ -243,6 +251,7 @@
 		<CustomAction Id="ValidateInstallFolder" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="ValidateInstallFolder" Execute="immediate" Return="check" />
 		<CustomAction Id="GAReportStart" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="GAReportStart" Execute="immediate" Return="check" />
 		<CustomAction Id="CustomOnError" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="CustomOnError" Execute="immediate" Return="ignore" />
+		<CustomAction Id="CustomUserExit" Impersonate="yes" BinaryKey="StateDeployCA" DllEntry="CustomUserExit" Execute="immediate" Return="ignore" />
 
 		<Binary Id="PresetCA" SourceFile="$(var.Preset.TargetDir)$(var.Preset.TargetName).CA.dll" />
 		<CustomAction Id="Preset" Impersonate="no" BinaryKey="PresetCA" DllEntry="InstallPreset" Execute="deferred" Return="check" />
